PLF-1370 : Toolbar improvements       - Fix a broken style caused by a Portal modification

--- a/extension/resources/src/main/webapp/skin/platformSkin/UIToolbarContainer/Stylesheet.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIToolbarContainer/Stylesheet.css
@@ -157,6 +157,10 @@
 }
 
 /**********************************/
+.UIToolbarContainer .ToolbarContainer a {
+    padding: 0px;
+}
+
 .UIWorkingWorkspace .UIToolbarContainer .ToolbarContainer a.TBIcon {
 	color: #FFD400;
 	font-weight: normal;
